# ChangeLog for app-misc/lirc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/lirc/ChangeLog,v 1.215 2010/05/21 02:32:35 beandog Exp $

*lirc-0.8.6-r3 (21 May 2010)

  21 May 2010; Steve Dibb <beandog@gentoo.org> files/lircd-0.8.6,
  +lirc-0.8.6-r3.ebuild, +files/lirc-0.8.6-i2c.patch,
  +files/lirc-0.8.6-send-evsyn.diff:
  I2C patch to build against gentoo-sources-2.6.32, bug 296739; Add
  localmount, modules to startup init, bug 314545; evdev input patch, bug
  299030

  21 May 2010; Steve Dibb <beandog@gentoo.org> files/lircd.conf.2:
  Typo in conf.d sample, bug 301346

  10 Mar 2010; Joseph Jezak <josejx@gentoo.org> lirc-0.8.6-r2.ebuild:
  Marked ~ppc/~ppc64 for bug #287662.

*lirc-0.8.6-r2 (15 Nov 2009)

  15 Nov 2009; Matthias Schwarzott <zzam@gentoo.org>
  +files/irexec-initd-0.8.6-r2, +lirc-0.8.6-r2.ebuild:
  Let irexec init-script depend on the virtual service lirc to be able to
  use a different lirc server, Bug #277588.

  03 Nov 2009; Matthias Schwarzott <zzam@gentoo.org> lirc-0.8.6-r1.ebuild:
  Change ebuild, so that lirc package does no longer own lircd.conf. That
  way portage should not delete lircd.conf on update or unmerge.

  03 Nov 2009; Matthias Schwarzott <zzam@gentoo.org> lirc-0.8.6-r1.ebuild:
  Change ebuild, so that lirc package does no longer own lircd.conf. That
  way portage should not delete lircd.conf on update or unmerge.

  06 Oct 2009; Christian Faulhammer <fauli@gentoo.org> lirc-0.8.5.ebuild:
  remove iguanaIR, because it is still in testing

*lirc-0.8.6-r1 (04 Oct 2009)

  04 Oct 2009; Christian Faulhammer <fauli@gentoo.org> +files/lircd-0.8.6,
  -lirc-0.8.6.ebuild, +lirc-0.8.6-r1.ebuild:
  Revision bump that will fix some new and some old issues:
  * Merge mceusb and mceusb2 driver (bug 286269 by candrews AT integralblue
  DOT com)
  * New init.d file that will keep the old socket location so we don't break