@@ -26,6 +26,7 @@ DIST lirc-0.8.4.tar.bz2 694420 RMD160 bc72c59f2ac3087b9c5918796f3c202cb1437e67 S
 DIST lirc-0.8.4a.tar.bz2 695650 RMD160 da334fc74c45ea81d22d26b1687692b4a1267888 SHA1 2f1d26c83a9f1ca876949bff80e1529e03618779 SHA256 22ce4239b3446c3f312643d83f5ccb22d549241272acebbac164f7b651608827
 DIST lirc-0.8.5.tar.bz2 716760 RMD160 f0fafeace28bf61f17bd3403ced6de3bfb9250b4 SHA1 d156655dd1694415a77492068a1b8e090bbaafcc SHA256 0b1594d9eacf278c66c8137b75f9a0a354e663b011ab373c7a207e63b45abcb6
 DIST lirc-0.8.6.tar.bz2 730341 RMD160 c4301b1ac966be48c856b606ae0fedd366cb608d SHA1 199aad7381e785945e4634f9a002e5ac35bf8930 SHA256 0a82e73b1bbf1712cff9d757739f9a2083be246d1b1d071f8808b5e6cca4d1a1
+DIST lirc-0.8.7pre1.tar.bz2 792651 RMD160 67c27459634fc07e5e6a3c31b4e7f412ea9cc512 SHA1 424bcfcc50378bb34876667e71bd2d8513d228d7 SHA256 5fd79d83e1de6d64dea809a5877738609c124ee68a639f3165bdd246b3ffb4be
 EBUILD lirc-0.8.3-r2.ebuild 9021 RMD160 6ddd9235fb94f9ccfebe0aec33d164555836ef2f SHA1 b6ecc239c4f7203fa949516c4cd99f1a3dd00dce SHA256 0f4ad34454682054fba3c42aa9964b561aa19f5922d026c2fc2f8b2a438b46d2
 EBUILD lirc-0.8.3_pre1.ebuild 8413 RMD160 5c1aad354c21af1c0e59a7664a618b4f845e4807 SHA1 b60cfb14611ba87df67cde41070f7c3b90e467a5 SHA256 aa2c154981ed8998d701e74744a73f84a758c2cfb69b2a4a07e2b6d42d75e932
 EBUILD lirc-0.8.4.ebuild 8942 RMD160 19d3fea9b5dedb272a640c30ee10d4a22dbf8b58 SHA1 f473243a365096732971a49ea8f20fde3fac913b SHA256 429ce5f9fd73a743676afa665f335e9dec0b8a73d528d45cc83a0d1d736fa2d6
@@ -34,5 +35,6 @@ EBUILD lirc-0.8.5.ebuild 9412 RMD160 f783b4d3e53f7f68b63627d2bbec709e40f11334 SH
 EBUILD lirc-0.8.6-r1.ebuild 10083 RMD160 9cacd5df5e4ee5659da7b0f2c4826780b4b4f9df SHA1 fd4df404550e0c2d75404c67d1cdb58a5484cf36 SHA256 c1629136d1f937c9c233d9009ff26cf0370bf32eaf71097dd61e481f584cebd0
 EBUILD lirc-0.8.6-r2.ebuild 10101 RMD160 b4c9cf29b93b3cdf28dbaf86fd9aa4e45636d9f2 SHA1 8640054c3821180e2339c017adb7323298c80ad3 SHA256 146c3c6b3bedb8c5fbe7dcfa9b2e1007a866e836775fb0edb8eb3fb3299c9ae8
 EBUILD lirc-0.8.6-r3.ebuild 10244 RMD160 9683e1da67e687a74d063d68b6f1326052d510d8 SHA1 dbf05ce225e7ddad9c71aa16d46ebebd52c091f0 SHA256 d1b9b4307edee1749736edc42e47dea4cb3d89829c996ef11cf26aa9687dd3d0
-MISC ChangeLog 35241 RMD160 f60b5519b1f02e9d751fe9b87560d859b981954a SHA1 a4b3c503a46a167fd98e809697c022580b2f44dd SHA256 72404def6131ca71fdd5dec321247a592d56c5384db5b20562e424c0caf3e219
+EBUILD lirc-0.8.7_pre1.ebuild 10104 RMD160 8d0cd0affc616e43ac3fa1c6d5810a1f088a314c SHA1 94392458f27868aee09b5d5211f2f9cbbe66457e SHA256 00b99f317926bea24f89755d9215625baa87f4555c06312658946c3aa114a51f
+MISC ChangeLog 35361 RMD160 ea7f2058ec1bf3c54dae3e4d494d5d2b7325523f SHA1 36ea11ad9c93d1e3ff7512cdd6ad05b402fc0155 SHA256 42072073d016415a0521eca45e098090d61a1375680c5e184d1dbf915d50eb42
 MISC metadata.xml 376 RMD160 7b854dad1999c38592eabe928aab80615ba1f1e5 SHA1 17dc9c9591c77aa4ec2d98b9bc1f34ff68da31ad SHA256 e3b4637a67a93eb4b9457fa5941e8a6a891adca11a1ebc80c21a59650eac93aa
