@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/lirc
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/lirc/ChangeLog,v 1.215 2010/05/21 02:32:35 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/lirc/ChangeLog,v 1.216 2010/05/21 02:47:00 beandog Exp $
+
+*lirc-0.8.7_pre1 (21 May 2010)
+
+  21 May 2010; Steve Dibb <beandog@gentoo.org> +lirc-0.8.7_pre1.ebuild:
+  Version bump
 
 *lirc-0.8.6-r3 (21 May 2010)
 
